Fix navbar doesn't collapse.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,11 +12,12 @@ body {
 .footer {
   margin-top: -100px;
   height: 100px;
-  padding-top: 20px;
+  padding-top: 100px;
   width: 100%;
   background-color: #f5f5f5;
 }
 
 .footer .container {
+  margin-top: -100px;
   line-height: 20px;
 }
